--- a/report/sections/system_perspective/design_architecture.tex
+++ b/report/sections/system_perspective/design_architecture.tex
@@ -11,8 +11,8 @@ However, all the auxilliary components, such as monitoring, logging etc. are dep
 The monolithic app is implemented as a ASP.NET MVC web server. It is delegated into two parts, or \textit{areas}, as they are referred to in the .NET-universe:
 
 \begin{itemize}
-	\item \texttt{Api}: Provides a RESTFUL API in accordance with the specifications provided by the course. It consists solely of controllers, that handle various endpoints.
-	\item \texttt{FrontEnd}: Provides a web-interface for the human users of our system. It is structured as a classic MVC-webapp, and the views are virtually identical to the UI provided by the Flask-based Minitwit-application that was provided to us in the beginning of the course.
+	\item \texttt{Api}: Provides a RESTFUL API in accordance with the specifications provided by the course. %It consists solely of controllers, that handle various endpoints.
+	\item \texttt{FrontEnd}: Provides a web-interface for the human users of our system. %It is structured as a classic MVC-webapp, and the views are virtually identical to the UI provided by the Flask-based Minitwit-application that was provided to us in the beginning of the course.
 \end{itemize}
 
 Both areas use the same object-relational mapping and data abstraction. As such, they are simply two different ways to interface with our system.
