shorten more stuff

--- a/report/sections/process_perspective/ai.tex
+++ b/report/sections/process_perspective/ai.tex
@@ -4,7 +4,7 @@
 
 During the project we have used the AI systems ChatGPT and GitHub Copilot.
 We have used them mainly to help in debugging, to fix simple errors, i.e. syntax errors, or to perform menial tasks such as translating from one language to another.
-This is due to the fact that these AI-assistants do not seem to work very well with bigger tasks, as they lack the view of the "big picture".
-An example for this happened when we were implementing our E2E tests with Cypress. ChatGPT tried to find the solution in the docker compose file, but basically it was our test file naming what was the problem.
-
-As a conclusion, the use of AI-systems can save time and make development efficient, if used in the right places.
+This is due to the fact that these AI-assistants do not seem to work very well with bigger tasks, as they lack the view of the "big picture", which we experienced multiple cases.
+%An example for this happened when we were implementing our E2E tests with Cypress. ChatGPT tried to find the solution in the docker compose file, but basically it was our test file naming what was the problem.
+%
+%As a conclusion, the use of AI-systems can save time and make development efficient, if used in the right places.
