--- a/report/sections/process_perspective/logging.tex
+++ b/report/sections/process_perspective/logging.tex
@@ -4,7 +4,7 @@
 \subsection{Fluentd}
 \subsubsection{Decision Log}
 
-In order to manage difficulties like logs scattered across multiple sources or disparate log formats we decided to use Fluentd.
+%In order to manage difficulties like logs scattered across multiple sources or disparate log formats we decided to use Fluentd.
 Fluentd is an open source data collector which processes the data from various sources, making it easier to manage and analyze.
 The following aspects show why we used Fluentd:
 \begin{itemize}
@@ -26,9 +26,9 @@ A diagram describing our use and implementation of Fluentd can be seen in figure
 
 \subsubsection*{Fluentd Configuration}
 
-Fluentd is configured to listen for incoming log data via the forward input plugin on port 24224.
-Log data from different sources is matched using the match directive which specifies the destination path and format for the corresponding log data.
-Log data is buffered using the buffer directive to handle data spikes or network outages, ensuring reliable log collection.
+Fluentd is configured to listen for incoming log data.%via the forward input plugin on port 24224.
+Log data from different sources is matched using the match directive.%which specifies the destination path and format for the corresponding log data.
+Log data is buffered using the buffer directive to handle data spikes or network outages.%, ensuring reliable log collection.
 
 \subsubsection*{Docker Compose Configuration}
 
