--- a/report/sections/lessons_learned/evolutionRefactoring.tex
+++ b/report/sections/lessons_learned/evolutionRefactoring.tex
@@ -2,7 +2,7 @@
 
 %We have followed the recommendation to implement the changes in small steps, which made the whole project more manageable. 
 %Nevertheless, 
-We ran into some issues, especially with our logging.
+%We ran into some issues, especially with our logging.
 We tried to implement elastic search with Kibana, which worked locally, but deploying it crashed the server due to limited memory.
 %We spent a lot of time on how we could reduce the memory usage so our server keeps up and running before 
 We decided to change to Fluentd, which in the end was the better solution.
