--- a/report/sections/system_perspective/dependencies.tex
+++ b/report/sections/system_perspective/dependencies.tex
@@ -10,8 +10,8 @@ The list below, is the technolgies we are using in our application, group into c
 	\item Microsoft AspNetCore v2 as the foundational framework.
 	\item Dotnet API framework: For handling RESTFul APIs
 	\item Swagger: For dotnet API visualization
-	\item Microsoft EntityFrameworkCore version 8.x: For general handling dependency injection to a database connection.
-	\item Postgress v.8: Choosen database servere for this project.
+	\item Microsoft EntityFrameworkCore version 8.x: Secure and reiable data transactions
+	\item Postgress v.8: Stable data storage
 	\item Docker : For containerized applications
 	\item gravatar: For provide user profile images.
 	\item Github: For storing and deploying source code
