--- a/report/sections/system_perspective/intro.tex
+++ b/report/sections/system_perspective/intro.tex
@@ -23,7 +23,7 @@ We elected not to use a dedicated virtualization solution,
 %as we did not find them to provide enough benefit for the time it would take to setup. 
 since we are already using Docker, and thus we assessed that achieving further encapsulation of the environment was not a teneable investment.
 
-Using Docker seemed like a very obvious choice: We avoid problems with incompatible developer machines, and it is also very easy to deploy docker images to our VM's. Furthermore,
+Using Docker was an easy choice: We avoid problems with incompatible developer machines, and it is also very easy to deploy docker images to our VM's. Furthermore,
 %the choice of Docker paid dividends later in the project, as 
 the choice allowed us to use the same Docker Compose configuration for deploying a Docker Swarm (see section \ref{sec:scaling} on page \pageref{sec:scaling}).
 
