--- a/report/sections/lessons_learned/maintenance.tex
+++ b/report/sections/lessons_learned/maintenance.tex
@@ -1,7 +1,7 @@
 \subsection{Maintenance}
 
-The first lesson we learned was maintenance of web application requires time and efforts, because there can be many new technologies that programmer has to add or change. 
-Another lesson we learned was there exists several tools to performing the same task and choosing which tool could be challenge. 
+The first lesson we learned was maintenance of web application requires time and effort, because there can be many new technologies that programmer has to add or change. 
+Another lesson we learned was there exists several tools to performing the same task and choosing which tool could be a challenge. 
 %After some research, we chose Playwright for UI testing because is newer and maintain by Microsoft.
 
 
