try to enforce a4

--- a/report/main.tex
+++ b/report/main.tex
@@ -1,6 +1,7 @@
 % !TeX encoding = UTF-8
 % !TeX spellcheck = en_GB
 \documentclass[12pt,a4paper]{report}
+\usepackage[a4paper]{geometry}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[british]{babel}
