--- a/report/sections/intro.tex
+++ b/report/sections/intro.tex
@@ -1,6 +1,6 @@
 \section*{Introduction}
 
-In this report we present our MiniTwit-project, which was developed during the course *DevOps, Software Evolution and Software Maintenance* at the IT University of Copenhagen.
+In this report we present our MiniTwit-project, which was developed during the course \textit{DevOps, Software Evolution and Software Maintenance} at the IT University of Copenhagen.
 
 Our project consists of a software system, namely MiniTwit, and a DevOps system that supports the deployment, operation, development, and maintenance of the software system.
 
